<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Codeforces</string>
    <string name="enter_handle">Enter Codeforces Handle</string>
    <string name="enter_handle_again">Don\'t leave it empty</string>
    <string name="only_one_handle">Give only one handle</string>
    <string name="handle">Handle???</string>
    <string name="user_info">User Info</string>
    <string name="user_rating">User Rating</string>
    <string name="recent_submission">Recent submissions</string>
    <string name ="review_head">Review:</string>
    <string name="welcome">Welcome</string>
    <string name="status">status</string>
    <string name="result">result</string>
    <string name="handle">handle</string>
    <string name="OK">OK</string>
    <string name="WrongHandle">Wrong handle, Try Again</string>
    <string name="NoInternetConnection">No Internet Connection</string>
    <string name="Name">Name : </string>
    <string name="Not_Provided"> Not Provided by user</string>
    <string name="City">City : </string>
    <string name="City_Not_Provided"> Not Provided by user</string>
    <string name="Organization">Organization : </string>
    <string name="Organization_Not_Provided"> Not Provided by user</string>
    <string name="Rating">Rating : </string>
    <string name="Max_Rating">Max Rating : </string>
    <string name="Rank">Rank : </string>
    <string name="Max_Rank">Max Rank : </string>
    <string name="avatar">avatar</string>
    <string name="firstName">firstName</string>
    <string name="contribution">contribution</string>
    <string name="registrationTimeSeconds">registrationTimeSeconds</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="Time">Time: </string>
    <string name="creationTimeSeconds">creationTimeSeconds</string>
    <string name="programmingLanguage">programmingLanguage</string>
    <string name="timeConsumedMillis">timeConsumedMillis</string>
    <string name="memoryConsumedBytes">memoryConsumedBytes</string>
    <string name="recent_submissions">Recent Submissions</string>
    <string name="no_submissions">No Submissions</string>
</resources>
